test/compile_pass/trivial.pine
def main do
  0
end
