test/compile_fail/if_not_bool_condition.pine
def main do
  if 42 then 1 else 0 end # error: failed to unify
end
